# study-helper

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: log-troubleshooting.md
scripts/: recover_downloads.py  recover_missing.py  sanitize_logs.py
src/: config.py  crypto.py  logger.py  main.py  updater.py
src/api/: server.py
src/api/routes/: download.py
src/auth/: login.py
src/converter/: audio_converter.py
src/downloader/: result.py  video_downloader.py
src/notifier/: deadline_checker.py  telegram_notifier.py
src/player/: background_player.py
src/scraper/: course_scraper.py  models.py
src/service/: download_pipeline.py  progress_store.py
src/stt/: transcriber.py
src/summarizer/: summarizer.py
src/ui/: auto.py  courses.py  download.py  login.py  player.py  recover.py  settings.py
src/util/: log_sanitize.py
tests/: conftest.py  test_download_state.py  test_logger_tree.py
