[project]
name = "study-helper"
version = "0.1.0"
description = "숭실대학교 LMS 강의 백그라운드 재생 및 다운로드/요약 도구"
requires-python = ">=3.11,<3.13"

dependencies = [
    # 브라우저 자동화 (로그인, 스크래핑, 백그라운드 재생)
    "playwright>=1.52.0",
    # CUI 인터페이스
    "rich>=13.0.0",
    "click>=8.0.0",
    # 영상/음성 다운로드 (청크 스트리밍)
    "requests>=2.32.0",
    # STT — faster-whisper (CTranslate2 기반, torch 불필요)
    "faster-whisper>=1.1.0",
    # AI 요약
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    # 환경변수
    "python-dotenv>=1.0.0",
    "cryptography>=46.0.5",
    # CVE-2025-68146, CVE-2026-22701 대응 — 3.20.0 취약 버전 제외
    "filelock>=3.25.0",
]

[project.optional-dependencies]

[project.scripts]
study-helper = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
